Use correct align-items value

--- a/src/css/pages/index.styl
+++ b/src/css/pages/index.styl
@@ -37,7 +37,7 @@
         padding 0
 
     .columns
-      align-items: top
+      align-items: flex-start
 
       .column
         .content
